fix nav slider design on mobile or tablet size

--- a/src/app/modules/destination/destination-detail/destination-detail.component.scss
+++ b/src/app/modules/destination/destination-detail/destination-detail.component.scss
@@ -1,6 +1,7 @@
 .destination-detail-container {
   width: 100%;
   padding: 10% 10% 10% 20%;
+  min-width: 425px;
 
   .navbar {
     background-color: transparent !important;
